# AutoFT8

./: .gitignore  LICENSE  Pipfile  README.md  autoft-sample.yaml  autoft.json  autoft.yaml  config.py  ftconsole.py  ftctrl.py  geo.py  monitor.py  pyproject.toml  requirements.txt  sequencer.py  sqstatus.py  transmit.py  wsjtx.py
plugins/: __init__.py  any.py  grid.py  notgrid.py
