[tool.poetry]
name = "autoft8"
version = "0.1.0"
description = "AutoFT8 is an experimental project for ham radio operators who want to automatically control WSJT-X."
authors = ["Fred Cirera"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "3.8.12"
pyyaml = "^6.0"
pymongo = "^3.12.1"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
